<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:context=".EventCreation"
            tools:showIn="@layout/activity_event_creation">

            <TextView
                android:id="@+id/event_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/event_details" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:inputType="time" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/duration" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes_opt" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/add_attachments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_file"/>

            <TextView
                android:id="@+id/location_details"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/location_details"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_street_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street_address"
                    android:inputType="textPostalAddress" />

            </android.support.design.widget.TextInputLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="272dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_input_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="117dp"
                    android:layout_height="match_parent"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_input_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_room_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/room_no_opt"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/suggested_locations_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suggested" />

            <Button
                android:id="@+id/add_users_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invite_button"
                />

            <Button
                android:id="@+id/save_meeting_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitInvitation"
                android:text="@string/save_changes" />
        </LinearLayout>
    </ScrollView>
