<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LocationSuggestion"
    tools:showIn="@layout/activity_location_suggestion">

    <android.support.design.widget.TextInputLayout

        android:id="@+id/suggestion_street_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/suggest_edit_street_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street_address"
            android:inputType="textPostalAddress" />


    </android.support.design.widget.TextInputLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout

            android:id="@+id/suggestion_city"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/suggest_edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/suggestion_state"
            android:layout_width="117dp"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/suggest_edit_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/suggestion_room_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/suggest_edit_room_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_no_opt"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/suggest_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggest_button" />

</LinearLayout>